# letterboxd-recommendations

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  training_config.yaml
api/: main.py
infra/: Pulumi.letterboxd.yaml  Pulumi.yaml  README.md  __main__.py
scripts/: convert_model.py  process.py  recommend.py  scrape.py  train.py
src/: dataset.py  letterboxd.py  model.py  numpy_recommender.py  recommender.py
src/scripts/: process.py  recommend.py  scrape.py  train.py
tests/: test_model_conversion.py
