[tool.poetry]
name = "]"
version = "0.1.0"
description = ""
authors = ["harrisonpim <hello@harrisonpim.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Scrapy = "^2.11.0"
pandas = "^2.1.2"
torch = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
