[tool.poetry]
name = "letterboxd-recommendations"
version = "0.1.0"
description = ""
authors = ["harrisonpim <hello@harrisonpim.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }, { include = "scripts" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Scrapy = "^2.11.0"
pandas = "^2.1.2"
torch = "^2.1.0"
rich = "^13.6.0"
humanize = "^4.8.0"
tqdm = "^4.66.1"
typer = "^0.9.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
